# data-science-container

./: .dockerignore  DockerFile  Dockerfile  README.md  datascience.sh  docker-data.sh  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
datascience/notebooks/: test.ipynb
