[tool.poetry]
name = "my-data-science-project"
version = "0.1.0"
description = "A simple project that uses Pandas"
authors = ["PJ Kelly <kellypj24@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
