[tool.poetry]
name = "my-data-science-project"
version = "0.1.0"
description = "A simple project that uses Pandas"
authors = ["PJ Kelly <kellypj24@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "2.1.4"
jupyterlab = "4.0.9"
ipykernel = "*"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
